--- a/assets/sass/base/_base-alerts.scss
+++ b/assets/sass/base/_base-alerts.scss
@@ -5,8 +5,9 @@
   flex: 1 100%;
   width: 100%;
   border-radius: 5px;
-  margin-top: $padding_base/4;
-  margin-bottom: $padding_base/4;
+  margin-top: $padding_base/2;
+  margin-right: $padding_base/2;
+  margin-left: $padding_base/2;
   padding: 20px;
   a {
     color: $color-alt2;
