--- a/assets/sass/blocks/_navegacion.scss
+++ b/assets/sass/blocks/_navegacion.scss
@@ -76,12 +76,15 @@ Main navbar
 .site-nav__main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin-top: 0;
+  justify-content: center;
   li {
-    // flex-basis: 150px;
+    flex: 0 1 150px;
+    text-align: center;
+    &:hover {
+      background-color: darken($color-alt, 5);
+    }
     @media screen and (min-width: 1024px) {
-        margin: ($padding_base/4) 0;
+      margin: ($padding_base/4) 0;
     }
   }
 }
