--- a/assets/sass/layout/_body.scss
+++ b/assets/sass/layout/_body.scss
@@ -15,9 +15,12 @@ body {
   flex-wrap: wrap;
   align-content: center;
   background-color: $site-main-bgcolor;
-  padding: $padding_base;
+  padding: ($padding_base/2);
+  @media screen and (min-width: 600px) {
+    padding: $padding_base;
+  }
   @media screen and (min-width: 1100px) {
-    flex: 1;
+    flex: 1 77%;
   }
 }
   .site-main__content {
