--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -4,7 +4,8 @@ header {}
   display: flex;
   flex-wrap: wrap;
   flex: 1 200px;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-content: flex-start;
   background-color: $color-alt;
   padding: $padding_base / 6;
 
