--- a/assets/sass/layout/_posts.scss
+++ b/assets/sass/layout/_posts.scss
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  // justify-content: center;
   @media screen and (min-width: 730px) {}
 }
   .posts-wrap-item {
