--- a/style.css
+++ b/style.css
@@ -761,8 +761,9 @@ textarea {
   flex: 1 100%;
   width: 100%;
   border-radius: 5px;
-  margin-top: 12.5px;
-  margin-bottom: 12.5px;
+  margin-top: 25px;
+  margin-right: 25px;
+  margin-left: 25px;
   padding: 20px; }
   .alert a {
     color: #abd1b2;
@@ -823,7 +824,8 @@ table {
   display: flex;
   flex-wrap: wrap;
   flex: 1 200px;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-content: flex-start;
   background-color: #ffba68;
   padding: 8.33333px; }
   @media screen and (min-width: 1344px) {
@@ -928,10 +930,13 @@ body {
   flex-wrap: wrap;
   align-content: center;
   background-color: #f6f5f4;
-  padding: 50px; }
+  padding: 25px; }
+  @media screen and (min-width: 600px) {
+    .site-main {
+      padding: 50px; } }
   @media screen and (min-width: 1100px) {
     .site-main {
-      flex: 1; } }
+      flex: 1 77%; } }
 
 .site-main__content {
   padding-left: 25px;
@@ -975,8 +980,7 @@ body {
 .posts-wrap {
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center; }
+  flex-wrap: wrap; }
 
 .posts-wrap-item {
   flex: 1 350px;
@@ -1098,10 +1102,16 @@ body {
   margin-bottom: 0; }
 
 .brand {
-  width: 75px; }
-  @media screen and (min-width: 1177px) {
-    .brand {
-      width: 150px; } }
+  flex: 0 1 150px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+.brand__logo svg {
+  width: 30%; }
+  @media screen and (min-width: 600px) {
+    .brand__logo svg {
+      width: 100%; } }
 
 .brand__logo path.hoja3 {
   animation-name: rotate;
@@ -1217,8 +1227,15 @@ body {
 
 .product-related {
   width: 100%;
-  background-color: #abd1b2;
-  padding: 25px; }
+  background-color: #abd1b2; }
+  .product-related h2 {
+    text-align: center;
+    padding-top: 25px;
+    margin-bottom: 0; }
+  .product-related .posts-wrap {
+    margin-bottom: 0; }
+  .product-related .posts-wrap-item {
+    margin: 0; }
 
 .product--features {
   margin-left: 50px;
@@ -1306,16 +1323,24 @@ body {
 .cart-actionform,
 .cart-collaterals {
   flex-grow: 1;
-  margin-top: 50px;
-  padding: 50px;
-  background-color: #fff; }
+  padding-top: 25px;
+  padding-bottom: 25px; }
+  @media screen and (min-width: 700px) {
+    .cart-actionform,
+    .cart-collaterals {
+      padding: 50px; } }
   @media screen and (min-width: 1100px) {
     .cart-actionform,
     .cart-collaterals {
       flex: 0 1 49%; } }
 
 .attachment-shop_thumbnail {
-  min-width: 75px; }
+  min-width: 20px; }
+  @media screen and (min-width: 700px) {
+    .attachment-shop_thumbnail {
+      min-width: 75px;
+      padding: 4px;
+      background-color: #ffba68; } }
 
 .product-total {
   width: 50%; }
@@ -1440,11 +1465,15 @@ Main navbar
 .site-nav__main {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  margin-top: 0; }
-  @media screen and (min-width: 1024px) {
-    .site-nav__main li {
-      margin: 12.5px 0; } }
+  justify-content: center; }
+  .site-nav__main li {
+    flex: 0 1 150px;
+    text-align: center; }
+    .site-nav__main li:hover {
+      background-color: #ffae4f; }
+    @media screen and (min-width: 1024px) {
+      .site-nav__main li {
+        margin: 12.5px 0; } }
 
 .site-nav__secondary {
   display: flex;
